--- a/documentation.yaml
+++ b/documentation.yaml
@@ -3,13 +3,13 @@
 documentation:
 
   - doc_root: 'guides/simple-proxy/index.adoc'
-    name: 'Routes Quickstart Guide'
+    name: 'Examples'
     display_name: 'Routing Simple Proxy'
     public_path: 'en/api-gateway/routes/simple-proxy'
     single_page: 'true'
 
   - doc_root: 'guides/test-window/index.adoc'
-    name: 'Routes Quickstart Guide'
+    name: 'Examples'
     display_name: 'Route Test Window'
     public_path: 'en/api-gateway/routes/test-window'
     single_page: 'true'
